@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+          - Changed default perms to 640
+
 0.54.1    2014-12-19 22:52:50
           - Updated prereqs. Slaven is testing with modules from the back
             pan again 0b1e0b44-87ba-11e4-ac75-b26ee0bfc7aa
